--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -203,6 +203,7 @@
     </Content>
     <Content Include="Templates\SimpleXml.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
