--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -74,6 +74,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controls\MyControls.cs" />
+    <Compile Include="Controls\Progress.xaml.cs">
+      <DependentUpon>Progress.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Custom\ICustomRazorTransformType.cs" />
     <Compile Include="Custom\PortInput.xaml.cs">
       <DependentUpon>PortInput.xaml</DependentUpon>
@@ -138,6 +142,10 @@
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
     <Page Include="Controls\MainEdit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Progress.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
