fix for apos in nested razor, put border on progress box

--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -216,6 +216,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Resource Include="Templates\ClrCalls.txt" />
     <Content Include="Templates\ItemBTranforms.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
