--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -92,6 +92,9 @@
     <Compile Include="Custom\ServerPort.cs" />
     <Compile Include="Custom\WebPort.cs" />
     <Compile Include="EventArgs.cs" />
+    <Compile Include="ITransformModel.cs" />
+    <Compile Include="ITransformModelGroup.cs" />
+    <Compile Include="ITransformModelItem.cs" />
     <Compile Include="ITransformOutput.cs" />
     <Compile Include="PasswordTransformModelItem.cs" />
     <Compile Include="RazorTransformer.cs" />
