--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -247,6 +247,17 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Resources\Settings.xml" />
+    <Resource Include="Resources\Gear.png" />
+    <Resource Include="Resources\Play.png" />
+    <Resource Include="Resources\Refresh.png" />
+    <Resource Include="Resources\copy.png" />
+    <Resource Include="Resources\Create.png" />
+    <Resource Include="Resources\Delete.png" />
+    <Resource Include="Resources\edit.png" />
+    <Resource Include="Resources\Save.png" />
+    <Resource Include="Resources\Cancel.png" />
+    <Resource Include="Resources\PlayClose.png" />
+    <Resource Include="Resources\Apply.png" />
     <Content Include="RtObject.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
@@ -268,6 +279,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
