--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/obj/x86
-/bin
+obj
+bin
 /packages
 /templates/bak
 *.user
