Sample Template and model update

--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -259,7 +259,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Templates\ClrCalls.txt">
+    <Content Include="Templates\zBasic.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Templates\ItemBTranforms.txt">
