Update nuget package to remove content

--- a/RazorTransform.nuspec
+++ b/RazorTransform.nuspec
@@ -11,7 +11,8 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>2.0.0.4 Fix for DestinationFolder not triggering Dirty and ADM callback save
+    <releaseNotes>2.0.0.5 Remove content folder from nuget package
+2.0.0.4 Fix for DestinationFolder not triggering Dirty and ADM callback save
 2.0.0.3 Pick up new RtPsHost
 2.0.0.2 First Nuget Package</releaseNotes>
         <copyright>Copyright © Jim Wallace 2010-2014</copyright>
