--- a/RazorTransform.nuspec
+++ b/RazorTransform.nuspec
@@ -11,17 +11,19 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>2.0.0.5 Remove content folder from nuget package
+    <releaseNotes>2.0.0.7 nuget dependency update
+2.0.0.6 nuget dependency update
+2.0.0.5 Remove content folder from nuget package
 2.0.0.4 Fix for DestinationFolder not triggering Dirty and ADM callback save
 2.0.0.3 Pick up new RtPsHost
 2.0.0.2 First Nuget Package</releaseNotes>
         <copyright>Copyright © Jim Wallace 2010-2014</copyright>
         <tags>Razor File Generator Free Deploy Tool</tags>
         <dependencies>
-            <dependency id="RazorEngine" version="3.4.1" />
-            <dependency id="Microsoft.AspNet.Razor" version="3.2.0" />
+            <dependency id="RazorEngine" version="3.4.0" />
+            <dependency id="Microsoft.AspNet.Razor" version="3.0.0" />
             <dependency id="Extended.Wpf.Toolkit" version="2.2.1" />
-            <dependency id="RtPsHost" version="1.0.1.1" />
+            <dependency id="RtPsHost" version="1.0.1.3" />
         </dependencies>
         <frameworkAssemblies>
             <frameworkAssembly assemblyName="Microsoft.CSharp" targetFramework="" />
