--- a/RazorTransform.nuspec
+++ b/RazorTransform.nuspec
@@ -11,7 +11,9 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>2.0.0.7 nuget dependency update
+    <releaseNotes>2.0.0.10 Another nested fix
+2.0.0.9 Fix for nested @Model.Parent values not expanding correctly
+2.0.0.8 Always put in orig attribute for easier RtValues parsing
 2.0.0.6 nuget dependency update
 2.0.0.5 Remove content folder from nuget package
 2.0.0.4 Fix for DestinationFolder not triggering Dirty and ADM callback save
