--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -133,6 +133,7 @@
     <Compile Include="RazorTemplateUtil.cs" />
     <Compile Include="RazorTransformer.cs" />
     <Compile Include="TransformResult.cs" />
+    <Compile Include="UI\ArrayItem.cs" />
     <Compile Include="UI\GuiProgress.cs" />
     <Compile Include="Controls\ITransformParentWindow.cs" />
     <Compile Include="Util\CollectionExtensions.cs" />
@@ -264,7 +265,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Resources\Settings.xml" />
+    <EmbeddedResource Include="Resources\Settings.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="RazorTransform.nuspec">
       <SubType>Designer</SubType>
     </None>
