--- a/RazorTransform.nuspec
+++ b/RazorTransform.nuspec
@@ -11,20 +11,11 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>2.1.0.4 Fix for hidden items showing up
-2.1.0.3 Fix saving values
-2.1.0.2 Fix for dupe tabs if running with PowerShell
-2.1.0.1 Fix for (c) encoding
+    <releaseNotes>2.1.0.8 Add @Model breadcrumb and units and margin fix and other fixes
 2.1.0.0 Rewrite of internal model.  Label type added.  Settings fixes.  @Model.array indexing by number, name support
-2.0.0.10 Another nested fix
-2.0.0.9 Fix for nested @Model.Parent values not expanding correctly
-2.0.0.8 Always put in orig attribute for easier RtValues parsing
-2.0.0.6 nuget dependency update
-2.0.0.5 Remove content folder from nuget package
-2.0.0.4 Fix for DestinationFolder not triggering Dirty and ADM callback save
-2.0.0.3 Pick up new RtPsHost
+2.0.0.10 Variouis fixes 
 2.0.0.2 First Nuget Package</releaseNotes>
-        <copyright>Copyright (c) Jim Wallace 2010-2014</copyright>
+        <copyright>Copyright (c) Jim Wallace 2010-2015</copyright>
         <tags>Razor File Generator Free Deploy Tool</tags>
         <dependencies>
             <dependency id="RazorEngine" version="3.4.0" />
