Add model hide for strings, sort fix, @Model fix

--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -99,6 +99,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controls\ModelItemEdit.xaml.cs">
+      <DependentUpon>ModelItemEdit.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\NumberWithUnits.xaml.cs">
       <DependentUpon>NumberWithUnits.xaml</DependentUpon>
     </Compile>
@@ -189,6 +192,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Page Include="Controls\ModelItemEdit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\NumberWithUnits.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
